--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
     "mariadb": "^3.2.1",
+    "mysql2": "^3.6.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   },
